--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: lgadallah@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Larry's place on the web.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://techn0mad.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.gadallah.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: techn0mad
 github_username:  techn0mad
 
