--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
+# See https://docs.github.com/en/github/working-with-github-pages/setting-up-a-github-pages-site-with-jekyll
+# for GitHub details
+
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
