--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "techn0mad.github.io",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Techn0mad",
+  "main": ".eleventy.js",
   "scripts": {
-    "build": "npx eleventy",
-    "serve": "npx eleventy --serve",
-    "debug": "DEBUG=* npx eleventy"
+    "build": "npx @11ty/eleventy",
+    "serve": "npx @11ty/eleventy --serve",
+    "clean": "rm -rf _site"
   },
   "repository": {
     "type": "git",
@@ -14,13 +14,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/techn0mad/techn0mad.github.io/issues"
+    "url": "https://github.com/techn0mad/techn0mad.github.io.git/issues"
   },
-  "homepage": "https://github.com/techn0mad/techn0mad.github.io#readme",
+  "homepage": "https://github.com/techn0mad/techn0mad.github.io.git#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3"
+    "@11ty/eleventy": "^0.12.1"
   }
 }
