--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Build
         uses: TartanLlama/actions-eleventy@v1.1
+        with:
+          install_dependencies: true
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
