--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./_site
+          publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
