--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,18 +10,26 @@ jobs:
     name: Eleventy Build
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v2
+    strategy:
+      matrix:
+        node-version: [12.x]
 
-      - name: Build
-        uses: TartanLlama/actions-eleventy@v1.3
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          install_dependencies: true
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies & build
+        run: |
+          npm ci
+          npm run build   
+          npm run add-domain       
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./_site
-          publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
