Tweaking Eleventy/GitHub Actions configs

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Techn0mad",
   "main": ".eleventy.js",
   "scripts": {
-    "build": "npx @11ty/eleventy",
+    "build": "env NODE_ENV=production npx @11ty/eleventy --pathprefix 'techn0mad'",
     "serve": "npx @11ty/eleventy --serve",
+    "debug": "DEBUG=* npx @11ty/eleventy",
+    "test": "jest"
     "clean": "rm -rf _site"
   },
   "repository": {
