Adding Google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,9 @@ defaults:
     values:
       image: true
 
+# Google Analytics
+google_analytics: UA-28057007-1
+
 # Disqus Comments
 # See https://cuda-chen.github.io/blogging/2020/03/28/add-Disqus-to-Jekyll-Minima-theme-simplified.html
 disqus:
