--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ show_excerpts: true
 
 # Build settings
 markdown: kramdown
-theme: minima
+#theme: minima
+theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
 
