--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,9 @@ show_excerpts: true
 # Build settings
 markdown: kramdown
 #theme: minima
-theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
+  - jekyll-include-cache
   - jekyll-feed
 
 # Exclude from processing.
