--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ google_fonts:
     weights: "400,400i,700,700i"
   - name: "Lora"
     weights: "400,400i,700,700i"
-google_analytics: "UA-28057007-1" # Google Analytics id, e.g. "UA-NNNNNNNN-N"
+google_analytics: # Google Analytics id, e.g. "UA-NNNNNNNN-N"
 disqus:
   shortname: techn0mad # Disqus shortname, e.g. "my_disqus_shortname"
 twitter:
