Fixing site URL setting, adding missing image

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ locale: en-US
 title: "Techn0mad"
 description: "Larry's place on the web."
 baseurl: # the subpath of your site, e.g. "/blog"
-url: https://blog.gadallah.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: https://techn0mad.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: # path of site logo, e.g. "/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: false # reading time estimates, e.g. true
